# backend

./: .gitignore  README.md  __enums__.py  common.py  pyproject.toml  requirements.txt  vercel.json
__utils__/: __init__.py  auth.py  data.py  enums.py
api/: admin.py  enums.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_remove_service_rating.py  0003_alter_service_price.py  0004_alter_service_category_orderhistoryentry.py  0005_geolocation_serviceprovider_geolocation.py  0006_remove_geolocation_longitude.py  0007_geolocation_longitude.py  0008_remove_serviceprovider_geolocation_and_more.py  0009_alter_orderhistoryentry_email.py
security/: models.py  serializers.py  urls.py  views.py
security/migrations/: 0001_initial.py  0002_user_is_admin_user_is_banned.py
server/: settings.py  urls.py
