[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
authors = [
]
dependencies = [
    "django-extensions>=3.2.3",
    "djangorestframework>=3.14.0",
    "psycopg2-binary>=2.9.9",
    "mysqlclient==2.1.1",
    "Django>=4.2.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.10.1",
]

[tool.hatch.metadata]
allow-direct-references = true
